--- a/resources/client/src/Components/Preview/Preview.module.css
+++ b/resources/client/src/Components/Preview/Preview.module.css
@@ -5,4 +5,5 @@
     border: 2px solid gray;
     margin: 0;
     padding: 1rem;
+    overflow: scroll;
 }
